syntax = "proto3";

package proto;
option go_package = "./;proto";

message Client{
  string  ID = 1;
  Node Root = 2;
}

message Node{
  string Key = 1; // topic section
  string FullKey = 2; // full topic
  string Value = 3;
  map<string, Node> ChildNode = 4; // child tree
}

message PutKeyRequest{
  string Key = 1;
  string Value = 2;
}

message PutKeyResponse{
  bool  Success = 1;
  string Message = 2;
}

message PutKeysRequest{
  map<string, string> Value = 2;
}

message PutKeysResponse{
  bool  Success = 1;
  string Message = 2;
}

message DeleteKeyRequest{
  string Key = 1;
}
message DeleteKeyResponse{
  bool  Success = 1;
  string Message = 2;
}

message DeleteKeysRequest{
  repeated string Keys = 1;
}

message DeleteKeysResponse{
  bool  Success = 1;
  string Message = 2;
}

message ReadKeyRequest{
  string Key = 1;
}

message ReadKeyResponse{
  bool  Success = 1;
  string Message = 2;
  string Value = 3;
}
message ReadPrefixKeyRequest{
  string Prefix = 2;
}

message ReadPrefixKeyResponse{
  bool  Success = 1;
  string Message = 2;
  map<string, string> Value = 3;
}

message ReadKeysRequest{
  repeated string Key = 1;
}

message ReadKeysResponse{
  bool  Success = 1;
  string Message = 2;
  map<string, string> Value = 3;
}